--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mama's Garden Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -43,6 +43,6 @@
         <p id="aiAdvice">Loading...</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='server.js') }}"></script>
 </body>
 </html>
