--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
 <body>
     <div class="button-container">
         <a href="{{ url_for('dashboard') }}"><button class="button-33" role="button">Dashboard</button></a>
-        <button class="button-33" role="button">About</button>
+        <button class="button-33" role="button">Tools</button>
     </div>
 
     <!-- Embed Spline 3D Scene as Background -->
