--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mama's Garden</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/Mamas.png') }}">
 </head>
 <body>
     <div class="button-container">
