--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -62,6 +62,10 @@
                         <p>Moisture: 70%</p>
                         <p>Sunlight: 7 hrs</p>
                         <p>Temperature: 24°C</p>
+                    </div>
+                </div>
+
+                <div class="plant-card">
                     <img src="{{ url_for('static', filename='images/k7543.jpg') }}">
                     <h3>Bonsai</h3>
 
