--- a/static/style.css
+++ b/static/style.css
@@ -25,34 +25,8 @@ h1 {
     }
 }
 
-.profile-container {
-    position: absolute; /* Ensures it stays in the top-left */
-    top: 10px;
-    left: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px; /* Adds spacing between image and name */
-}
-
-/* Circular Profile Picture */
-.profile-pic {
-    width: 50px; /* Adjust size as needed */
-    height: 50px;
-    border-radius: 50%; /* Makes it circular */
-    object-fit: cover;
-    border: 2px solid #ddd; /* Optional border */
-}
-
-/* Profile Name */
-.profile-name {
-    font-size: 1rem;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    color: black;
-}
-
 h2 {
-    font-family: 'Papyrus', fantasy, serif; /* Papyrus as primary, fantasy as fallback */
+    font-family: 'Patrick Hand', cursive; /* Papyrus as primary, fantasy as fallback */
     font-size: 2.5rem;
     color: #000000; /* Dark brown, similar to aged parchment */
     text-align: center;
@@ -61,7 +35,8 @@ h2 {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 1.5rem;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -157,8 +132,9 @@ nav a {
 }
 
 body {
-    background: linear-gradient(to bottom, green, grey);
-    height: 150vh;
+    background: linear-gradient(to bottom, green 10%, grey 60%);
+    height: 105vh;
     margin: 0;
     padding: 0;
 }
+
