--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+body, html {
+    overflow: hidden;
+}
+
 /* Import "The Scientist" Font */
 @font-face {
     font-family: 'The Scientist';
@@ -137,4 +141,35 @@ body {
     margin: 0;
     padding: 0;
 }
+
+
+/* Home Button Styling */
+.home-button {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 15px;
+    border-radius: 100%;
+    transition: transform 0.4s ease-in-out, background-color 2s ease-in-out;
+    z-index: 1000; /* Ensure it stays on top */
+    
+    /* Initial White Background with Gradient */
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
+    
+    animation: fadeGradient 2.5s ease-in-out forwards;
+}
+
+/* Home Button Icon */
+.home-button img {
+    width: 40px;
+    height: 40px;
+    transition: opacity 1s ease-in-out;
+}
+
+/* Hover Effect */
+.home-button:hover {
+    transform: scale(1.1);
+    background: rgba(255, 255, 255, 0.2);
+}
+
 
