--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+    <a href="{{ url_for('home') }}" class="home-button">
+        <img src="{{ url_for('static', filename='images/home.png') }}" alt="Home">
+    </a>
+
     <!-- Animated Title -->
     <nav>
         <h1>Mama's Garden</h1>
