--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,7 @@
                     <h3>Aloe Vera</h3>
                     <div class="extra-info">
                         <p>Humidity: 90%</p>
-                        <p>Water Level: 3</p>
+                        <p>Water Level: 10cm</p>
                         <p>Moisture: 75%</p>
                         <p>Light: 62 lux</p>
                         <p>Temperature: 25°C / 77°F</p>
@@ -43,7 +43,7 @@
                     <h3>Snake Plant</h3>
                     <div class="extra-info">
                         <p>Humidity: 80%</p>
-                        <p>Water Level: 5</p>
+                        <p>Water Level: 5cm</p>
                         <p>Moisture: 50%</p>
                         <p>Light: 58 lux</p>
                         <p>Temperature: 22°C / 71.6°F</p>
@@ -55,7 +55,7 @@
                     <h3>Basil</h3>
                     <div class="extra-info">
                         <p>Humidity: 95%</p>
-                        <p>Water Level: 4</p>
+                        <p>Water Level: 41cm</p>
                         <p>Moisture: 70%</p>
                         <p>Light: 78 lux</p>
                         <p>Temperature: 24°C / 75.2°F</p>
@@ -67,16 +67,14 @@
                     <h3>Bonsai</h3>
                     <div class="extra-info">
                         <p>Humidity: {{ plant.humidity }}%</p>
-                        <p>Water Level: {{ plant.waterLevel }}</p>
+                        <p>Water Level: {{ plant.waterLevel }}cm</p>
                         <p>Moisture: {{ plant.moisture }}%</p>
                         <p>Light: {{ plant.light }} lux</p>
                         <p>Temperature: {{ plant.temperatureC }}°C / {{ plant.temperatureF }}°F</p>
                     </div>
                 </div>
-        
             </div>
         </div>
-        
     </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
