--- a/templates/plant.html
+++ b/templates/plant.html
@@ -7,6 +7,7 @@
     <title>Plant Data Visualization</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='water.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/Mamas.png') }}">
 </head>
 <body>
 
