--- a/static/water.css
+++ b/static/water.css
@@ -46,20 +46,74 @@ canvas {
     text-align: right !important;
 }
 
-/* Title Styling */
-h2 {
-    font-family: 'Patrick Hand', cursive;
-    font-size: 2rem;
-    font-weight: bold;
-    color: black;
+.content {
+    position: relative; /* Ensures the h1 is positioned relative to this container */
+    width: 100%;
+    height: 200px; /* Adjust height to control vertical placement */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.content h1 {
+    font-family: 'Patrick Hand', cursive;
+    color: #000000;
+    font-size: 7em;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%); /* Adjust vertical centering */
+    white-space: nowrap;
+}
+
+
+/* .content h1:nth-child(1) {
+	color: transparent;
+	-webkit-text-stroke: 2px #542D1C;
+} */
+
+.content h1:nth-child(2) {
+	color: #bbf1e7;
+	animation: animate 4s ease-in-out infinite;
+}
+
+@keyframes animate {
+	0%,
+	100% {
+		clip-path: polygon(
+			0% 45%,
+			16% 44%,
+			33% 50%,
+			54% 60%,
+			70% 61%,
+			84% 59%,
+			100% 52%,
+			100% 100%,
+			0% 100%
+		);
+	}
+
+	50% {
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
+	}
+}
+
 
 /* General Page Styling */
 body {
     font-family: 'Patrick Hand', cursive;
     text-align: center;
     margin: 20px;
-    background: linear-gradient(to bottom, green, grey);
+    background: linear-gradient(to bottom, #15d89f 10%, #eaf8fb 60%);
     color: black;
 }
 
