--- a/templates/plant.html
+++ b/templates/plant.html
@@ -9,8 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-
-    <h1 style="color: black; font-size: 4rem; text-align: center;">How is my Bonsai?</h1>
+    <section>
+        <div class="content">
+            <h1>How is my Bonsai?</h1>
+            <h1>How is my Bonsai?</h1>
+        </div>
+    </section>
 
     <!-- Dropdown to Select Graph Type -->
     <label for="graphType">Select Metric:</label>
