--- a/templates/plant.html
+++ b/templates/plant.html
@@ -23,7 +23,7 @@
     </a>
 
 
-    <!-- Dropdown to Select Graph Type -->
+    <!-- Dropdown to Graph Type -->
     <label for="graphType">Select Metric:</label>
     <select id="graphType">
         <option value="temperatureF">Temperature (°F)</option>
